@@ -1,3 +1,7 @@
+2023-08-23  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>
+
+	* pplib.test: Make easier to test on Windows.
+
 2023-05-27  Karl Berry  <karl@freefriends.org>
 
 	* pplib-src/test/out2: no period at end of message.
